Created UI with buttons for playing

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="main.js"></script>
 </head>
 <body>
-    <button onclick="game()">Start game</button>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+
+    <h1>User score:</h1>
+    <h1 id="usrScore">0</h1>
+    <h1>Computer score:</h1>
+    <h1 id="compScore">0</h1>
+
+    <div id="results">
+    </div>
 </body>
+<script src="main.js"></script>
 </html>
